feat(delete): new handler delete enterprise by cnpj
